# comp-vision-project-26

./: .gitignore  CNN_OPTIONS.md  README.md  config.yaml  inference.py  pyproject.toml
input/images/: .0020.jpg.icloud  labels.csv
petreco/: __init__.py
petreco/detector/: __init__.py  base.py  yolo.py
src/: cnn.py  detector.py  main.py  meta.py  views.py
tests/: test_cnn.py
