[project]
name = "comp-vision"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pillow",
    "pyyaml",
    "timm>=1.0.27",
    "torch",
    "ultralytics",
    "torchvision",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "tqdm>=4.68.3",
]

[tool.uv]
package = false
